--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 
 
-body{
+body {
   background-image: url('https://thumbs.gfycat.com/HarmfulOptimalAlligatorsnappingturtle-size_restricted.gif');
   display: flex;
+  background-color: black;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  
 }
 
 
